Fix NavBottomBar from wrapping on smaller screens. Cant see all the buttons

--- a/src/components/widgets/NavBottomBar.css
+++ b/src/components/widgets/NavBottomBar.css
@@ -12,6 +12,7 @@
   z-index: 13;
   text-align: center;
   font-size: 0.9em;
+  white-space: nowrap;
 }
 
 .NavBottomBar .nav-sidebar-version {
